--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,11 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+	<!-- 全屏样式 -->
+	<style name="fullTheme" parent="AppBaseTheme">
+	    <item name="android:windowNoTitle">true</item>
+	</style>
+	
 
 </resources>
